<resources>
    <string name="app_name">BasicCalculator</string>
    <string name="clear_text">C</string>
    <string name="plusminus_text">\u00B1</string>
    <string name="percent_text">%</string>
    <string name="divide_text">\u00F7</string>
    <string name="nine_text">9</string>
    <string name="eight_text">8</string>
    <string name="seven_text">7</string>
    <string name="six_text">6</string>
    <string name="five_text">5</string>
    <string name="four_text">4</string>
    <string name="three_text">3</string>
    <string name="two_text">2</string>
    <string name="one_text">1</string>
    <string name="zero_text">0</string>
    <string name="dec_text">.</string>
    <string name="mult_text">\u00D7</string>
    <string name="add_text">\u002B</string>
    <string name="sub_text">\u2212</string>
    <string name="equal_text">=</string>
</resources>